KWATTA RELEASNOTES
==================

Version 1.0.10 Release date: 03-05-2022
---------------------------------------
1) Added the SQL test type. Add your SQL tests!!
2) Upgraded to higher version of Marlin (8.0.2)
3) Added SQLComponents for SQL tests

Version 1.0.9 Release date: 14-04-2022
--------------------------------------
1) Made it possible to edit a HTTPMessage as a MultiPartBuffer, so we can send
   multipart/mixed data to an OData $batch processor
   See the button "MultiPart" in the internet step editor on the first tab (Request).

Version 1.0.8 Release date: 24-03-2022
--------------------------------------
1) Updated to Marlin version 8.0.0
2) Updated to SQLComponents version 2.0.0
3) Upgraded to BaseLibrary

Version 1.0.5 Release date: 30-01-2022
--------------------------------------
1)  Updated the Marlin component to version 7.3.0
2)  Timing and waiting before/after a teststep on both Command-Line and Internet tests
3)  The possiblity to end a teststap after a maximum time

Version 1.0.4 Release date: 20-01-2022
--------------------------------------
1)  Added the possibility to promote test-steps and validations to the global directory
    You can add global teststeps or validations to a new teststep.

Version 1.0.1 Release date: 02-01-2022
--------------------------------------
1)  Fixes for TestRunner in releasemode. Absolute must to upgrade to this version!
2)  All resources now have the proper version information for the executables
3)  Bugfix for bcd class (decimal numbers)
4)  Fix for build depedencies. To build a installer, just build the release mode configuration.
    64Bits NSIS must be present in the "C:\Program Files\NSIS" directory.