@@ -261,6 +261,9 @@
     <ClInclude Include="MapDialog.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="ExecuteShell.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="pch.cpp">
@@ -453,6 +456,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="MapDialog.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="ExecuteShell.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
