@@ -6,6 +6,7 @@ Version 1.0.10 Release date: 03-05-2022
 1) Added the SQL test type. Add your SQL tests!!
 2) Upgraded to higher version of Marlin (8.0.2)
 3) Added SQLComponents for SQL tests
+4) Added input/output files for HTTPMessage tests
 
 Version 1.0.9 Release date: 14-04-2022
 --------------------------------------
